@@ -37,6 +37,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   (In this implementation, it equals the value of TIME).
 - INKEY with negative argument partially supported. (-129 to -255 not supported)
 * V1.21.5
+- Merged J.G.Harston's "Banana Brandy" fork, and cleaned up some breakages
+  caused by this.
 - Fixed a couple of compiler warnings that show up in Fedora.
 - PLOT codes for drawing dotted lines implemented, along with skipping start
   and end points as required.
